--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   provider: ^6.0.3
   firebase_core: ^1.17.1
   cloud_firestore: ^3.1.17
+  image_picker: ^0.8.5+3
+  firebase_storage: ^10.2.17
 
 dev_dependencies:
   flutter_test:
